# Stream-Deck

./: CMakeLists.txt  kursova.slnx
kursova/: Actions.cpp  Actions.h  App.cpp  App.h  Config.cpp  Config.h  DOCUMENTATION.txt  FileDialogs.cpp  FileDialogs.h  Resource.h  Tray.cpp  Tray.h  UiControls.cpp  UiControls.h  kursova.cpp  kursova.rc  kursova.vcxproj  kursova.vcxproj.filters  origin.txt
kursova/data/: buttons.txt
kursova/kursova/x64/Debug/: kursova.exe.recipe  kursova.ilk  kursova.vcxproj.FileListAbsolute.txt  vc145.idb
kursova/kursova/x64/Debug/kursova.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  kursova.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
kursova/x64/Debug/: kursova.exe.recipe  kursova.ilk  kursova.res  kursova.vcxproj.FileListAbsolute.txt  vc145.idb
kursova/x64/Debug/data/: buttons.txt
kursova/x64/Debug/kursova.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  kursova.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
